// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configuration smoketest test-files/config/cjs-config/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/cjs-config/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 71,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- configuration to disable rule, should not yield anything -->
<br></br>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/directive/disable.html 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/config/directive/disable.html",
    "messages": [
      {
        "column": 3,
        "context": "i",
        "line": 1,
        "message": "<i> must not be self-closed",
        "offset": 2,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 3,
        "context": "i",
        "line": 8,
        "message": "<i> must not be self-closed",
        "offset": 212,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(4)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<i/>Before disable, should trigger

<!-- [html-validate-disable no-self-closing] -->
<i/>After disable, should not trigger
<i/>After disable, should not trigger

<!-- [html-validate-enable no-self-closing] -->
<i/>Before after, should trigger
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/directive/disable-block.html 1`] = `
[
  {
    "errorCount": 6,
    "filePath": "test-files/config/directive/disable-block.html",
    "messages": [
      {
        "column": 3,
        "context": "i",
        "line": 1,
        "message": "<i> must not be self-closed",
        "offset": 2,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 4,
        "context": "i",
        "line": 3,
        "message": "<i> must not be self-closed",
        "offset": 43,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "div:nth-child(2) > i:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 3,
        "context": "i",
        "line": 11,
        "message": "<i> must not be self-closed",
        "offset": 335,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(3)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 36,
        "context": {
          "ruleId": "no-self-closing",
        },
        "line": 14,
        "message": ""no-self-closing" rule is disabled but no error was reported",
        "offset": 409,
        "ruleId": "no-unused-disable",
        "ruleUrl": "https://html-validate.org/rules/no-unused-disable.html",
        "selector": null,
        "severity": 2,
        "size": 15,
      },
      {
        "column": 3,
        "context": "i",
        "line": 16,
        "message": "<i> must not be self-closed",
        "offset": 439,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(5)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 35,
        "context": {
          "ruleId": "no-self-closing",
        },
        "line": 18,
        "message": ""no-self-closing" rule is disabled but no error was reported",
        "offset": 506,
        "ruleId": "no-unused-disable",
        "ruleUrl": "https://html-validate.org/rules/no-unused-disable.html",
        "selector": null,
        "severity": 2,
        "size": 15,
      },
    ],
    "source": "<i/>Outside block, should trigger
<div>
	<i/>Inside block, before directive, should trigger
	<!-- [html-validate-disable-block no-self-closing] -->
	<i/>Inside block, after directive, shout not trigger
	<div>
		<i/>Inside block, after directive, shout not trigger
	</div>
	<i/>Inside block, after directive, shout not trigger
</div>
<i/>Outside block, should trigger

<div>
	<!-- [html-validate-disable-block no-self-closing] -->
</div>
<i/>Outside block, should trigger

<!-- [html-validate-disable-block no-self-closing] -->
Should handle when root element is parent but no children
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/directive/disable-multiple.html 1`] = `
[
  {
    "errorCount": 3,
    "filePath": "test-files/config/directive/disable-multiple.html",
    "messages": [
      {
        "column": 2,
        "context": {
          "documentation": "\`<blink>\` has no direct replacement and blinking text is frowned upon by accessibility standards.",
          "source": "non-standard",
          "tagName": "blink",
        },
        "line": 1,
        "message": "<blink> is deprecated",
        "offset": 1,
        "ruleId": "deprecated",
        "ruleUrl": "https://html-validate.org/rules/deprecated.html",
        "selector": "blink",
        "severity": 2,
        "size": 5,
      },
      {
        "column": 7,
        "context": "blink",
        "line": 1,
        "message": "<blink> must not be self-closed",
        "offset": 6,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "blink",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 3,
        "context": {
          "child": "<blink>",
          "kind": "content",
          "parent": "<div>",
        },
        "line": 5,
        "message": "<blink> element is not permitted as content under <div>",
        "offset": 116,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "div > blink",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<blink/> Outside block, should trigger

<div>
	<!-- [html-validate-disable-block no-self-closing, deprecated] -->
	<blink/>Inside block, should not trigger
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/directive/disable-next.html 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/config/directive/disable-next.html",
    "messages": [
      {
        "column": 3,
        "context": "i",
        "line": 1,
        "message": "<i> must not be self-closed",
        "offset": 2,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(1)",
        "severity": 2,
        "size": 2,
      },
      {
        "column": 3,
        "context": "i",
        "line": 5,
        "message": "<i> must not be self-closed",
        "offset": 136,
        "ruleId": "no-self-closing",
        "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
        "selector": "i:nth-child(3)",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<i/>Before disable, should trigger

<!-- [html-validate-disable-next no-self-closing] -->
<i/>First after disable, should not trigger
<i/>Second after disable, should trigger
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/elements/file.html 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/config/elements/file.html",
    "messages": [
      {
        "column": 3,
        "context": {
          "blacklist": [],
          "pattern": "^[a-z][a-z0-9\\-._]*-[a-z0-9\\-._]*$",
          "tagName": "deprecated",
        },
        "line": 2,
        "message": "<deprecated> is not a valid element name",
        "offset": 8,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "div > deprecated",
        "severity": 2,
        "size": 10,
      },
      {
        "column": 4,
        "context": {
          "child": "<p>",
          "kind": "content",
          "parent": "<ul>",
        },
        "line": 6,
        "message": "<p> element is not permitted as content under <ul>",
        "offset": 109,
        "ruleId": "element-permitted-content",
        "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
        "selector": "div > ul > p",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<div>
	<deprecated>new (deprecated) element</deprecated>

	<ul>
		<li>overridden so it is disallowed</li>
		<p>overridden so it is allowed</p>
	</ul>
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/extend-order/foo.html 1`] = `[]`;

exports[`configuration smoketest test-files/config/extend-order/nested/foo.html 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "test-files/config/extend-order/nested/foo.html",
    "messages": [
      {
        "column": 3,
        "context": {
          "blacklist": [],
          "pattern": "^[a-z][a-z0-9\\-._]*-[a-z0-9\\-._]*$",
          "tagName": "c",
        },
        "line": 9,
        "message": "<c> is not a valid element name",
        "offset": 139,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "div:nth-child(2) > c",
        "severity": 2,
        "size": 1,
      },
      {
        "column": 8,
        "line": 9,
        "message": "Mismatched close-tag, expected '</c>' but found '</d>'.",
        "offset": 144,
        "ruleId": "close-order",
        "ruleUrl": "https://html-validate.org/rules/close-order.html",
        "selector": null,
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<div>
	<!-- should both yield errors: disallowed by nested.json -->
	<a>..</a>
	<b>..</b>
</div>

<div>
	<!-- should not yield error -->
	<c>..</d>
</div>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 49,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- default configuration yields error -->
<br></br>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/js-config/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/js-config/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 71,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- configuration to disable rule, should not yield anything -->
<br></br>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/off/error/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/off/error/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 42,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- reconfigured to yield error -->
<br></br>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/off/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/off/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 71,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- configuration to disable rule, should not yield anything -->
<br></br>
",
    "warningCount": 0,
  },
]
`;

exports[`configuration smoketest test-files/config/warn/file.html 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "test-files/config/warn/file.html",
    "messages": [
      {
        "column": 6,
        "context": "br",
        "line": 2,
        "message": "End tag for <br> must be omitted",
        "offset": 44,
        "ruleId": "void-content",
        "ruleUrl": "https://html-validate.org/rules/void-content.html",
        "selector": null,
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<!-- configured to yield a warning -->
<br></br>
",
    "warningCount": 0,
  },
]
`;
